--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.5.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "enquire.js": "^2.1.6",
+    "less-loader": "^6.0.0",
     "vue": "^2.6.11",
+    "vue-ls": "^3.2.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
   },
@@ -19,6 +23,7 @@
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
